main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "demovpc"
  }
}

resource "aws_subnet" "main2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "pubsubnet"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "demogw"
  }

}

resource "aws_route_table" "example" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

# route {
#   ipv6_cidr_block        = "::/0"
# egress_only_gateway_id = aws_egress_only_internet_gateway.example.id
#  }

  tags = {
    Name = "demorouter"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.main2.id
  route_table_id = aws_route_table.example.id
}

resource "aws_instance" "web" {
  ami           ="ami-006dcf34c09e50022"
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.main2.id

  tags = {
    Name = "demoec2"
  }
}
